# stockM

./: .dockerignore  .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
config/: tickers.csv
configs/: backtest_config.yaml  data_config.yaml  deployment_config.yaml  evaluation_config.yaml  feature_config.yaml  logging_config.yaml  model_config.yaml  optimization_config.yaml  paths.yaml  prediction_config.yaml  project_config.yaml  training_config.yaml
data/raw/: ADANIENT_NS.csv  ADANIPORTS_NS.csv  ASIANPAINT_NS.csv  AXISBANK_NS.csv  BAJAJ-AUTO_NS.csv  BAJFINANCE_NS.csv  BHARTIARTL_NS.csv  BPCL_NS.csv  BRITANNIA_NS.csv  Bajajfinsv_NS.csv  CIPLA_NS.csv  COALINDIA_NS.csv  DABUR_NS.csv  DIVISLAB_NS.csv  DRREDDY_NS.csv  EICHERMOT_NS.csv  GRASIM_NS.csv  HCLTECH_NS.csv  HDFCBANK_NS.csv  HDFCLIFE_NS.csv  HEROMOTOCO_NS.csv  HINDALCO_NS.csv  HINDUNILVR_NS.csv  ICICIBANK_NS.csv  INDUSINDBK_NS.csv  INFY_NS.csv  ITC_NS.csv  JSPL_NS.csv  JSWSTEEL_NS.csv  KOTAKBANK_NS.csv  LT_NS.csv  M&M_NS.csv  MARUTI_NS.csv  NESTLEIND_NS.csv  NTPC_NS.csv  ONGC_NS.csv  POWERGRID_NS.csv  RELIANCE_NS.csv  RELIANCE_NS_1d_2005-05-05_2026-07-12.csv  SBILIFE_NS.csv  (+12 more)
reports/features/: ADANIENT_NS_eda_report.json  ADANIPORTS_NS_eda_report.json  ASIANPAINT_NS_eda_report.json  AXISBANK_NS_eda_report.json  BAJAJ-AUTO_NS_eda_report.json  BAJFINANCE_NS_eda_report.json  BHARTIARTL_NS_eda_report.json  BPCL_NS_eda_report.json  BRITANNIA_NS_eda_report.json  Bajajfinsv_NS_eda_report.json  CIPLA_NS_eda_report.json  COALINDIA_NS_eda_report.json  DABUR_NS_eda_report.json  DIVISLAB_NS_eda_report.json  DRREDDY_NS_eda_report.json  EICHERMOT_NS_eda_report.json  GRASIM_NS_eda_report.json  HCLTECH_NS_eda_report.json  HDFCBANK_NS_eda_report.json  HDFCLIFE_NS_eda_report.json  HEROMOTOCO_NS_eda_report.json  HINDALCO_NS_eda_report.json  HINDUNILVR_NS_eda_report.json  ICICIBANK_NS_eda_report.json  INDUSINDBK_NS_eda_report.json  INFY_NS_eda_report.json  ITC_NS_eda_report.json  JSPL_NS_eda_report.json  JSWSTEEL_NS_eda_report.json  KOTAKBANK_NS_eda_report.json  LT_NS_eda_report.json  M&M_NS_eda_report.json  MARUTI_NS_eda_report.json  NESTLEIND_NS_eda_report.json  NTPC_NS_eda_report.json  ONGC_NS_eda_report.json  POWERGRID_NS_eda_report.json  RELIANCE_NS_eda_report.json  SBILIFE_NS_eda_report.json  SBIN_NS_eda_report.json  (+10 more)
reports/training/: ASIANPAINT_NS_baseline_report.json  AXISBANK_NS_baseline_report.json  BAJFINANCE_NS_baseline_report.json  BHARTIARTL_NS_baseline_report.json  Bajajfinsv_NS_baseline_report.json  HCLTECH_NS_baseline_report.json  HDFCBANK_NS_baseline_report.json  HINDUNILVR_NS_baseline_report.json  ICICIBANK_NS_baseline_report.json  INFY_NS_baseline_report.json  ITC_NS_baseline_report.json  KOTAKBANK_NS_baseline_report.json  LT_NS_baseline_report.json  MARUTI_NS_baseline_report.json  RELIANCE_NS_baseline_report.json  SBIN_NS_baseline_report.json  SUNPHARMA_NS_baseline_report.json  TCS_NS_baseline_report.json  global_leaderboard.json
src/: main.py  run_baseline_training.py  run_eda_pipeline.py  run_feature_pipeline.py
src/collectors/: __init__.py  historical_collector.py
src/eda/: __init__.py  correlation.py  dataset_overview.py  distributions.py  eda_pipeline.py  feature_selection.py  leakage_detection.py  outliers.py  scaling.py  splitting.py  statistics.py  target_analysis.py
src/feature_engineering/: __init__.py  feature_pipeline.py  feature_validator.py  lag_features.py  momentum_features.py  price_features.py  rolling_features.py  target_features.py  time_features.py  trend_features.py  volatility_features.py  volume_features.py
src/models/: __init__.py  baseline_models.py  comparison.py  data_loader.py  error_analysis.py  evaluation.py  feature_importance.py  model_storage.py  prediction.py  (+1 more)
(+451 files in other folders)
